--- a/build.gradle
+++ b/build.gradle
@@ -37,8 +37,10 @@ deploy {
     }
 }
 
+
+
 // Set this to true to enable desktop support.
-def includeDesktopSupport = false
+def includeDesktopSupport = true
 
 // Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
 // Also defines JUnit 4.
@@ -53,6 +55,7 @@ dependencies {
     nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
 
     testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:3.3.3'
 
     // Enable simulation gui support. Must check the box in vscode to enable support
     // upon debugging
@@ -68,6 +71,10 @@ dependencies {
 sim {
     // Sets the websocket client remote host.
     // envVar "HALSIMWS_HOST", "10.0.0.2"
+}
+
+test {
+  useJUnit()
 }
 
 // Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
