--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "java.configuration.updateBuildConfiguration": "automatic",
+  "java.server.launchMode": "Standard",
   "files.exclude": {
     "**/.git": true,
     "**/.svn": true,
@@ -10,16 +11,18 @@
     "**/.classpath": true,
     "**/.project": true,
     "**/.settings": true,
-    "**/.factorypath": true
+    "**/.factorypath": true,
+    "**/*~": true
   },
   "java.test.config": [
     {
-        "name": "WPIlibUnitTests",
-        "workingDirectory": "${workspaceFolder}/build/tmp/jniExtractDir",
-        "vmargs": [ "-Djava.library.path=${workspaceFolder}/build/tmp/jniExtractDir" ],
-        "env": { "LD_LIBRARY_PATH": "${workspaceFolder}/build/tmp/jniExtractDir",
-                 "DYLD_LIBRARY_PATH": "${workspaceFolder}/build/tmp/jniExtractDir" }
-        
+      "name": "WPIlibUnitTests",
+      "workingDirectory": "${workspaceFolder}/build/jni/release",
+      "vmargs": [ "-Djava.library.path=${workspaceFolder}/build/jni/release" ],
+      "env": {
+        "LD_LIBRARY_PATH": "${workspaceFolder}/build/jni/release" ,
+        "DYLD_LIBRARY_PATH": "${workspaceFolder}/build/jni/release"
+      }
     },
   ],
   "java.test.defaultConfig": "WPIlibUnitTests"
